<resources>
    <string name="app_name">Info agency</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="all_news">All news</string>

    <string name="about_aplication">About aplication</string>
    <string name="about_text">This is aplication about information agency created by Ljubisa Samardzic</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancel</string>
    <string name="add_coment">Add coment</string>

    <string name="subject">Add your Subject</string>
    <string name="developer">Dear Developer Name,</string>
    <string name="feedback">Send Feedback:</string>
    <string name="add_news">Add news</string>
    <string name="news_title">News title</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="insert">Insert</string>
    <string name="coment_title">Coment title</string>
    <string name="coment_description">Coment description</string>
    <string name="coment_author">Coment author</string>
    <string name="coment_date">Add coment date</string>
    <string name="save">Save</string>
    <string name="coment_no_save">Coment finished without saving.</string>
    <string name="coment_saved">Coment inserted</string>
    <string name="news_saved">News inserted</string>
    <string name="all_news_are">All news are listed on main activity after adding.</string>
    <string name="information_agency">Information agency</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="clik_for_date">Clik for date</string>
    <string name="are_you_sure_you_want_to_delete_news">Are you sure you want to delete news!</string>
</resources>
