<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/coment_title"
        android:hint="@string/coment_title"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/coment_description"
        android:hint="@string/coment_description"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/coment_author"
        android:hint="@string/coment_author"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/coment_date"
        android:hint="@string/coment_date"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_coment_add"
        android:text="@string/save"
        android:layout_gravity="right"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_coment_cancel"
        android:text="Cancel"
        android:layout_gravity="right"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>