<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androiddevelopment.infoagency.activities.SecondActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/tv_newsname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/news_title"
            android:textSize="18dp"
            android:layout_below="@id/toolbar"/>

        <TextView
            android:id="@+id/tv_newsdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_weight="1"
            android:textSize="18dp"
            android:layout_below="@+id/tv_newsname"/>

        <TextView
            android:id="@+id/tv_newsauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_newsdescription"
            android:textSize="18dp"/>


        <TextView
            android:id="@+id/tv_newsdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_newsauthor"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/tv_likes"
            android:text="@string/likes"
            android:layout_width="90sp"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_newsdate"/>

        <Button
            android:id="@+id/button_like"
            android:text="@string/like"
            android:layout_width="100sp"
            android:layout_marginStart="29dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_likes"/>

        <ListView
            android:id="@+id/list_coment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_below="@id/button_like">
        </ListView>

        <Button
            android:id="@+id/button_dislike"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_likes"
            android:layout_marginEnd="29dp"
            android:text="@string/dislike" />

        <TextView
            android:id="@+id/tv_dislikes"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_newsdate"
            android:layout_centerHorizontal="true"
            android:text="@string/dislikes" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
