<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/news_name"
        android:hint="@string/news_title"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/news_description"
        android:hint="@string/description"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/news_author"
        android:hint="@string/author"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/click_news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose date"/>

        <EditText
            android:id="@+id/choosen_news_date"
            android:gravity="right"
            android:layout_width="150sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/click_news_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Choose image"/>

        <ImageView
            android:id="@+id/choosen_news_image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="right" />

    </LinearLayout>

    <Button
        android:id="@+id/button_news_add"
        android:text="@string/insert"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>